select a better event, and change it

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -10,5 +10,5 @@
   "background": {
       "page": "background.html"
    },
-  "permissions": [ "tabs", "http://*/" ]
+  "permissions": [ "tabs", "http://*/", "webRequest", "webRequestBlocking"]
 }
